--- a/index.html
+++ b/index.html
@@ -47,8 +47,134 @@
             Therefore, we are always ready to improve everyone who comes to us!</p>
             <button type="button">ONLINE-BOOKING</button>
         </section>
+
+        <section>
+            <p>Spend your time with the best masters</p>
+            <h2>Services and prices</h2>
+            <ul>
+                <li>
+                    <p>Men’s haircut</p>
+                    <p>from 300 uah.</p>
+                </li>
+                <li>
+                    <p>Beard trim</p>
+                    <p>from 300 uah.</p>
+                </li>
+                <li>
+                    <p>Mustache trim</p>
+                    <p>from 200 uah.</p>
+                </li>
+                <li>
+                    <p>Straight razor shave</p>
+                    <p>from 200 uah.</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <p>Trainee’s haircut</p>
+                    <p>from 50 uah.</p>
+                </li>
+                <li>
+                    <p>Haircut under the nozzle</p>
+                    <p>from 200 uah.</p>
+                </li>
+                <li>
+                    <p>Children’s haircut (0-12 y.o.)</p>
+                    <p>from 300 uah.</p>
+                </li>
+                <li>
+                    <p>Camouflage of gray hair</p>
+                    <p>from 200 uah.</p>
+                </li>
+            </ul>
+            <button>online-booking</button>
+        </section>
+
+        <section>
+            <ul>
+                <li>
+                    <span>600</span><sup>+</sup>
+                    <p>Satisfied customers per day</p>
+                </li>
+                <li>
+                    <span>50</span><sup>+</sup>
+                    <p>Awards for excellent service</p>
+                </li>
+                <li>
+                    <span>20</span><sup>+</sup>
+                    <p>Kyiv’s best 
+                        barbers</p>
+                </li>
+                <li>
+                    <span>100</span><sup>+</sup>
+                    <p>Gifts for regular customers</p>
+                </li>
+            </ul>
+
+            <p>Old traditional school</p>
+            <h2>¿Why people come to us?</h2>
+            <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times. </p>
+        </section>
+
+        <section>
+            <p>For true enjoyers of the atmosphere</p>
+            <h2>Our barbers</h2>
+            <ul>
+                <li>
+                    <img src="./img/img_3.jpg" alt="John" width="370">
+                    <h3>John Smith</h3>
+                    <p>Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="./img/img_4.jpg" alt="Michele" width="370">
+                    <h3>Michele Doe</h3>
+                    <p>Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="./img/img_5.jpg" alt="Alan" width="370">
+                    <h3>Alan Black</h3>
+                    <p>Extreme Barber</p>
+                </li>
+            </ul>
+        </section>
+        
+        <section>
+            <h2></h2>
+            <p></p>
+            <ul>
+                <li><img src="./img/img_6.jpg" alt="our barbers" width="270"></li>
+                <li><img src="./img/img_7.jpg" alt="our barbers" width="270"></li>
+                <li><img src="./img/img_8.jpg" alt="our barbers" width="270"></li>
+                <li><img src="./img/img_9.jpg" alt="our barbers" width="270"></li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Online-booking</h2>
+        </section>
+
+        <section>
+            <h2>Contacs</h2>
+            <address>
+                <ul>
+                    <li><a href="https://www.google.com/maps?q=st.+Vasilkovaya,+7A+Kiev,+08132&um=1&ie=UTF-8&sa=X&ved=2ahUKEwiouKiElpD7AhUM-yoKHYxkBI4Q_AUoAXoECAEQAw"
+                        target="_blank" rel="noopener noregerrer nofollow">st. Vasilkovaya, 7A
+                        Kiev, 08132</a></li>
+                    <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
+                    <li><a href="mailto:barbershop@email.com"></a>barbershop@email.com</li>
+                </ul>
+            </address>    
+        </section>
+        <p>Working hours</p>
+        <p>Every day from 9:00 to 22:00</p>
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>&#9400 Copyright 2020</p>
+        <ul>
+            <li><a href="">Instagram</a></li>
+            <li><a href=""></a>Youtube</li>
+        </ul>
+    </footer>
 </body>
 </html>
