--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Barbershop</title>
 </head>
 <body>
-    <header></header>
+    <header>
         <a href="">
         <img src="./img/Logo.svg" alt="Logo">
         </a>
@@ -21,6 +21,7 @@
         </nav>
         <a href="tel:+380441111111">+38 044 111 11 11</a>
         <button type="button">Online-booking</button>
+    </header>    
     <main>
         <section>
             <p>A hair salon for men in Kyiv</p>
@@ -139,8 +140,8 @@
         </section>
         
         <section>
-            <h2></h2>
-            <p></p>
+            <h2>our barbers</h2>
+            <p>In Latin, "barba" means "beard"</p>
             <ul>
                 <li><img src="./img/img_6.jpg" alt="our barbers" width="270"></li>
                 <li><img src="./img/img_7.jpg" alt="our barbers" width="270"></li>
@@ -170,7 +171,7 @@
     </main>
 
     <footer>
-        <p>&#9400 Copyright 2020</p>
+        <p>&#9400;Copyright 2020</p>
         <ul>
             <li><a href="">Instagram</a></li>
             <li><a href=""></a>Youtube</li>
